--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,4 +1,18 @@
 <app-header titulo="Alert"></app-header>
-<ion-content>
-
+<ion-content class="ion-padding">
+<ion-button (click)="presentAlert()" expand="block">
+    Button
+</ion-button>
+<ion-button (click)="presentAlertMultipleButtons()" expand="block">
+    MultiButtons
+</ion-button>
+<ion-button (click)="presentAlertPrompt()" expand="block">
+    Alert Prompt
+</ion-button>
+<ion-button (click)="presentAlertRadio()" expand="block">
+    AlertRadio
+</ion-button>
+<ion-button (click)="presentAlertCheckbox()" expand="block">
+    AlertCheckBox
+</ion-button>
 </ion-content>
