color de botones

--- a/src/global.scss
+++ b/src/global.scss
@@ -26,5 +26,5 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 .rojo, .rojo .sc-ion-action-sheet-md{
-    color:red !important;
+    color: #ff2929 !important;
 }
