--- a/src/app/pages/date-time/date-time.page.html
+++ b/src/app/pages/date-time/date-time.page.html
@@ -32,10 +32,10 @@
         displayFormat="YYYY"
       ></ion-datetime>
     </ion-item>
-
     <ion-item>
       <ion-label>Custom Option</ion-label>
-      <ion-datetime [pickerOptions]="customPickerOptions"></ion-datetime>
+      <ion-datetime [pickerOptions]="customPickerOptions"
+                    [yearValues]="customYearValues"></ion-datetime>
     </ion-item>
   </ion-list>
 </ion-content>
