--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Action-shit"></app-header>
+<app-header titulo="Action-shait"></app-header>
 <ion-content>
 <ion-button (click)="onClick()" expand="block" class="ion-padding">
     Mostrar Action Shit
