--- a/src/app/pages/tab/tab.page.html
+++ b/src/app/pages/tab/tab.page.html
@@ -11,14 +11,14 @@
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button><ion-icon color="youtube" name="logo-youtube"></ion-icon></ion-fab-button>
       <ion-fab-button><ion-icon color="facebook" name="logo-facebook"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon color="youtube" name="logo-youtube"></ion-icon></ion-fab-button>      
+      <ion-fab-button><ion-icon color="twitter" name="logo-twitter"></ion-icon></ion-fab-button>
     </ion-fab-list>
     <ion-fab-list side="start">
-      <ion-fab-button><ion-icon color="" name="logo-vimeo"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-google"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-github"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon color="vimeo" name="logo-vimeo"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon color="google" name="logo-google"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon color="github" name="logo-github"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
   <ion-list>
