--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,6 +75,14 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
+  /**Google**/
+  --ion-color-google: #ff0011;
+  --ion-color-google-rgb: 255, 0, 17;
+  --ion-color-google-contrast: #ffffff;
+  --ion-color-google-contrast-rgb: 255, 255, 255;
+  --ion-color-google-shade: #e0000f;
+  --ion-color-google-tint: #ff1a29;
+
   /**Youtube**/
   --ion-color-youtube: #ff0011;
   --ion-color-youtube-rgb: 255, 0, 17;
@@ -85,13 +93,36 @@
 
   /**Facebook**/
   --ion-color-facebook: #1298f6;
-	--ion-color-facebook-rgb: 18,152,246;
-	--ion-color-facebook-contrast: #ffffff;
-	--ion-color-facebook-contrast-rgb: 255,255,255;
-	--ion-color-facebook-shade: #1086d8;
-	--ion-color-facebook-tint: #2aa2f7;
-}
+  --ion-color-facebook-rgb: 18, 152, 246;
+  --ion-color-facebook-contrast: #ffffff;
+  --ion-color-facebook-contrast-rgb: 255, 255, 255;
+  --ion-color-facebook-shade: #1086d8;
+  --ion-color-facebook-tint: #2aa2f7;
 
+  /**Twitter**/
+  --ion-color-twitter: #1da1f2;
+  --ion-color-twitter-rgb: 29, 161, 242;
+  --ion-color-twitter-contrast: #000000;
+  --ion-color-twitter-contrast-rgb: 0, 0, 0;
+  --ion-color-twitter-shade: #1a8ed5;
+  --ion-color-twitter-tint: #34aaf3;
+
+  /**vimeo**/
+  --ion-color-vimeo: #1393cd;
+  --ion-color-vimeo-rgb: 19, 147, 205;
+  --ion-color-vimeo-contrast: #ffffff;
+  --ion-color-vimeo-contrast-rgb: 255, 255, 255;
+  --ion-color-vimeo-shade: #1181b4;
+  --ion-color-vimeo-tint: #2b9ed2;
+
+  /**github**/
+  --ion-color-github: #ffffff;
+  --ion-color-github-rgb: 255, 255, 255;
+  --ion-color-github-contrast: #000000;
+  --ion-color-github-contrast-rgb: 0, 0, 0;
+  --ion-color-github-shade: #e0e0e0;
+  --ion-color-github-tint: #ffffff;
+}
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
@@ -265,4 +296,36 @@
   --ion-color-contrast-rgb: var(--ion-color-facebook-contrast-rgb) !important;
   --ion-color-shade: var(--ion-color-facebook-shade) !important;
   --ion-color-tint: var(--ion-color-facebook-tint) !important;
+}
+.ion-color-twitter {
+  --ion-color-base: var(--ion-color-twitter) !important;
+  --ion-color-base-rgb: var(--ion-color-twitter-rgb) !important;
+  --ion-color-contrast: var(--ion-color-twitter-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-twitter-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-twitter-shade) !important;
+  --ion-color-tint: var(--ion-color-twitter-tint) !important;
+}
+.ion-color-vimeo {
+  --ion-color-base: var(--ion-color-vimeo) !important;
+  --ion-color-base-rgb: var(--ion-color-vimeo-rgb) !important;
+  --ion-color-contrast: var(--ion-color-vimeo-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-vimeo-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-vimeo-shade) !important;
+  --ion-color-tint: var(--ion-color-vimeo-tint) !important;
+}
+.ion-color-github {
+  --ion-color-base: var(--ion-color-github) !important;
+  --ion-color-base-rgb: var(--ion-color-github-rgb) !important;
+  --ion-color-contrast: var(--ion-color-github-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-github-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-github-shade) !important;
+  --ion-color-tint: var(--ion-color-github-tint) !important;
+}
+.ion-color-google {
+  --ion-color-base: var(--ion-color-google) !important;
+  --ion-color-base-rgb: var(--ion-color-google-rgb) !important;
+  --ion-color-contrast: var(--ion-color-google-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-google-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-google-shade) !important;
+  --ion-color-tint: var(--ion-color-google-tint) !important;
 }
