--- a/src/app/pages/scroll/scroll.page.html
+++ b/src/app/pages/scroll/scroll.page.html
@@ -6,10 +6,12 @@
   </ion-item>
 </ion-list>
 
-<ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+<ion-infinite-scroll threshold="100px" 
+                    
+                    (ionInfinite)="loadData($event)">
   <ion-infinite-scroll-content
-    loadingSpinner="crescent"
-    loadingText="Loading more data...">
+    loadingSpinner="circular"
+    loadingText="Cargando información...">
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
 
